# TNT

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  config.sh
aks_theorem/: aks_theorem.cpp  aks_theorem.h
include/: aks_theorem.h
src/: aks.rs  aks_theorem.cc  lib.rs  main.rs  polynomial.rs  polynomialB.rs  polywrap.rs
src/aks/optimized/: custom.rs  gmp_opt.rs
src/aks/optimized/custom/: sieve.rs
src/aks/optimized/gmp_opt/: poly.rs
src/aks/original/: gmp.rs
src/aks/original/gmp/: constants.rs  poly.rs  sieve.rs
src/number_theory/: order.rs  util.rs
src/number_theory/perfect_power/bernstein/: bernstein_1998.rs
src/number_theory/primality/: naive.rs  sieve.rs
src/number_theory/primality/aks/: aks_2002.rs  aks_2003.rs  aks_2005.rs  aks_bernstein.rs  aks_theorem.cc  aks_theorem.rs
src/number_theory/primes_less_than/: naive.rs  sieve.rs
