[package]
name = "aks_primes"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Rust implementation of AKS Primality Test"
repository = "https://github.com/Skaidus/AKS_Primes"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.16"

[profile.release]
debug = 1