[package]
name = "aks_primes"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Rust implementation of AKS Primality Test"
repository = "https://github.com/Skaidus/AKS_Primes"
readme = "README.md"
links = "NTL"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
num = "0.4.0"
cxx = "1.0.32"

[build-dependencies]
cxx-build = "1.0.32"

