[package]
name = "tnt-lib"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A Rust implementation of many certificates about Integers"
repository = "https://github.com/Skaidus/TNT"
readme = "README.md"
links = "NTL"
build = "build.rs"
keywords = ["AKS", "Primality", "Mathematics", "Bernstein", "Cryptography"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[dependencies]
num = "0.4.0"
cxx = "1.0.32"

[build-dependencies]
cxx-build = "1.0.32"

